--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CORE-IQ Postcode Insight</title>
+  <title>CORE-IQ™ Postcode Lookup</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="container">
     <h1>Find Your Audience Profile</h1>
-    <p>Enter your UK postcode or US ZIP code to get matched with your Experian Mosaic group and media consumption insight.</p>
+    <p>
+      Enter your UK postcode or US ZIP code to get matched with your Experian
+      Mosaic group and media consumption insight.
+    </p>
     <input type="text" id="postcodeInput" placeholder="Enter postcode or ZIP..." />
-    <button id="submitButton">Get Insights</button>
+    <button id="submitButton">GET INSIGHTS</button>
+
     <div id="resultContainer" class="results hidden"></div>
   </div>
+
   <script src="main.js"></script>
 </body>
 </html>
