--- a/index.html
+++ b/index.html
@@ -1,133 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CORE-IQ™ Postcode Lookup</title>
-    <link rel="stylesheet" href="styles.css" />
-    <style>
-      body {
-        margin: 0;
-        font-family: 'Inter', sans-serif;
-        background-color: #000;
-        color: #fff;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 40px 20px;
-        min-height: 100vh;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>CORE-IQ™ | Audience Lookup</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #000;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      overflow-x: hidden;
+      padding: 2rem;
+    }
 
-      h1 {
-        font-size: 2rem;
-        margin-bottom: 10px;
-      }
+    .glow-container {
+      background: rgba(0, 0, 0, 0.85);
+      border: 1px solid #00ffae;
+      box-shadow: 0 0 30px rgba(0, 255, 174, 0.2);
+      border-radius: 24px;
+      padding: 40px;
+      text-align: center;
+      max-width: 560px;
+      width: 100%;
+      animation: fadeInUp 1s ease-out;
+    }
 
-      p {
-        color: #aaa;
-        margin-bottom: 30px;
-        text-align: center;
-        max-width: 600px;
-      }
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(30px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
 
-      input {
-        padding: 12px;
-        border: none;
-        border-radius: 8px;
-        margin-right: 10px;
-        width: 220px;
-        max-width: 60vw;
-        font-size: 1rem;
-      }
+    h1 {
+      font-size: 2rem;
+      font-weight: 800;
+      margin-bottom: 16px;
+      color: #fff;
+    }
 
-      button {
-        padding: 12px 18px;
-        background-color: #00ffae;
-        color: #000;
-        border: none;
-        border-radius: 8px;
-        font-weight: 600;
-        cursor: pointer;
-        font-size: 1rem;
-      }
+    p {
+      font-size: 1rem;
+      margin-bottom: 24px;
+      color: #ccc;
+    }
 
-      .hidden {
-        display: none;
-      }
+    input[type="text"] {
+      padding: 12px 20px;
+      border-radius: 12px;
+      border: none;
+      font-size: 1rem;
+      width: 65%;
+      margin-right: 12px;
+    }
 
-      .card-wrap {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-        margin-top: 30px;
-        max-width: 700px;
-        width: 100%;
-      }
+    button {
+      padding: 12px 20px;
+      font-weight: 600;
+      background-color: #00ffae;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
 
-      .insight-card {
-        background-color: #111;
-        border-left: 6px solid #00ffae;
-        padding: 16px 20px;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0, 255, 174, 0.1);
-        transition: background 0.3s ease;
-      }
+    button:hover {
+      background-color: #00e29e;
+    }
 
-      .insight-card:hover {
-        background-color: #1a1a1a;
-      }
+    #resultContainer {
+      margin-top: 2rem;
+      animation: fadeIn 0.8s ease-out;
+    }
 
-      .insight-title {
-        font-weight: 700;
-        font-size: 1rem;
-        margin-bottom: 4px;
-      }
+    .card-wrap {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
 
-      .insight-index,
-      .insight-message {
-        font-size: 0.9rem;
-        color: #ccc;
-      }
+    .insight-card {
+      background: #111;
+      border-left: 5px solid #00ffae;
+      padding: 16px;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0, 255, 174, 0.2);
+      text-align: left;
+      animation: fadeIn 0.6s ease-out;
+    }
 
-      #resetButton {
-        margin-top: 32px;
-        background: #00ffae;
-        color: #000;
-        font-weight: 600;
-        padding: 12px 24px;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        display: inline-block;
-      }
+    .insight-title {
+      font-weight: 600;
+      font-size: 1rem;
+      margin-bottom: 4px;
+    }
 
-      @media (max-width: 500px) {
-        input {
-          margin-bottom: 10px;
-          width: 100%;
-        }
+    .insight-index {
+      font-size: 0.9rem;
+      color: #ccc;
+    }
 
-        button {
-          width: 100%;
-        }
+    .reset-btn {
+      margin-top: 1.5rem;
+      background: #222;
+      color: #fff;
+      border: 1px solid #00ffae;
+      transition: all 0.3s ease;
+    }
 
-        .card-wrap {
-          gap: 12px;
-        }
-      }
-    </style>
-  </head>
-  <body>
+    .reset-btn:hover {
+      background: #00ffae;
+      color: #000;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
+</head>
+<body>
+  <div class="glow-container">
     <h1>Find Your Audience Profile</h1>
-    <p>
-      Enter your UK postcode or US ZIP code to get matched with your Experian Mosaic group and media consumption insight.
-    </p>
-    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; margin-bottom: 20px;">
-      <input type="text" id="postcodeInput" placeholder="Enter postcode or ZIP" />
-      <button id="submitButton">GET INSIGHTS</button>
-    </div>
+    <p>Enter your UK postcode or US ZIP code to get matched with your Experian Mosaic group and media consumption insight.</p>
+    <input type="text" id="postcodeInput" placeholder="Enter postcode or ZIP" />
+    <button id="submitButton">GET INSIGHTS</button>
     <div id="resultContainer" class="hidden"></div>
+  </div>
 
-    <script src="main.js"></script>
-  </body>
+  <script src="main.js"></script>
+</body>
 </html>
+
