--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       overflow-x: hidden;
+      overflow-y: auto;
       padding: 2rem;
     }
 
