Clarify budget usage and tweak input

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
       color: #ccc;
     }
 
-    input[type="text"] {
+    input[type="text"],
+    input[type="number"] {
       padding: 12px 20px;
       border-radius: 12px;
       border: none;
@@ -96,6 +97,11 @@
       animation: fadeIn 0.6s ease-out;
     }
 
+    .low-index {
+      border-left-color: #ff5454;
+      box-shadow: 0 0 12px rgba(255, 84, 84, 0.2);
+    }
+
     .insight-title {
       font-weight: 600;
       font-size: 1rem;
@@ -131,10 +137,13 @@
     <h1>Find Your Audience Profile</h1>
     <p>Enter your UK postcode or US ZIP code to get matched with your Experian Mosaic group and media consumption insight.</p>
     <input type="text" id="postcodeInput" placeholder="Enter postcode or ZIP" />
+    <input type="text" id="audienceInput" placeholder="Describe your audience" />
+    <input type="number" id="budgetInput" placeholder="Budget (£)" min="0" step="0.01" />
     <button id="submitButton">GET INSIGHTS</button>
     <div id="resultContainer" class="hidden"></div>
   </div>
 
+  <script src="budget.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
