Add package.json and basic test

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <h1>Find Your Audience Profile</h1>
     <p>Enter your UK postcode or US ZIP code to get matched with your Experian Mosaic group and media consumption insight.</p>
     <input type="text" id="postcodeInput" placeholder="Enter postcode or ZIP" />
-    <input type="number" id="budgetInput" placeholder="Budget (£)" />
+    <input type="number" id="budgetInput" placeholder="Budget (£)" min="0" step="0.01" />
     <button id="submitButton">GET INSIGHTS</button>
     <div id="resultContainer" class="hidden"></div>
   </div>
