--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
   <div class="glow-container">
     <h1>Find Your Audience Profile</h1>
     <p>Enter your UK postcode, US ZIP code or any search term to get matched with your Experian Mosaic group and media consumption insight.</p>
+    <input type="text" id="audienceInput" placeholder="Describe your audience" />
     <input type="text" id="postcodeInput" placeholder="Enter postcode, ZIP or search term" />
     <input type="number" id="budgetInput" placeholder="Budget (£)" min="0" step="0.01" />
     <button id="submitButton">GET INSIGHTS</button>
