--- a/index.html
+++ b/index.html
@@ -12,67 +12,6 @@
       font-family: 'Inter', sans-serif;
       background-color: #000;
       color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      overflow-x: hidden;
-      padding: 2rem;
-    }
-
-    .glow-container {
-      background: rgba(0, 0, 0, 0.85);
-      border: 1px solid #00ffae;
-      box-shadow: 0 0 30px rgba(0, 255, 174, 0.2);
-      border-radius: 24px;
-      padding: 40px;
-      text-align: center;
-      max-width: 560px;
-      width: 100%;
-      animation: fadeInUp 1s ease-out;
-    }
-
-    @keyframes fadeInUp {
-      0% { opacity: 0; transform: translateY(30px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    h1 {
-      font-size: 2rem;
-      font-weight: 800;
-      margin-bottom: 16px;
-      color: #fff;
-    }
-
-    p {
-      font-size: 1rem;
-      margin-bottom: 24px;
-      color: #ccc;
-    }
-
-    input[type="text"],
-    input[type="number"] {
-      padding: 12px 20px;
-      border-radius: 12px;
-      border: none;
-      font-size: 1rem;
-      width: 65%;
-      margin-right: 12px;
-    }
-
-    button {
-      padding: 12px 20px;
-      font-weight: 600;
-      background-color: #00ffae;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #00e29e;
     }
 
     #resultContainer {
@@ -128,14 +67,18 @@
   </style>
 </head>
 <body>
-  <div class="glow-container">
-    <h1>Find Your Audience Profile</h1>
-    <p>Enter your UK postcode, US ZIP code or any search term to get matched with your Experian Mosaic group and media consumption insight.</p>
-    <input type="text" id="postcodeInput" placeholder="Enter postcode, ZIP or search term" />
-    <input type="number" id="budgetInput" placeholder="Budget (£)" min="0" step="0.01" />
-    <button id="submitButton">GET INSIGHTS</button>
-    <div id="resultContainer" class="hidden"></div>
-  </div>
+  <section style="background: linear-gradient(to bottom, #000, #0a0a0a); height: 100vh; display: flex; justify-content: center; align-items: center; padding: 0 20px;">
+    <div style="width: 100%; max-width: 540px; background: #0c0c0c; padding: 40px 32px; border-radius: 20px; box-shadow: 0 0 30px rgba(0, 255, 174, 0.2); border: 2px solid rgba(0, 255, 174, 0.4); text-align: center;">
+      <h2 style="font-size: clamp(1.8rem, 4vw, 2.5rem); font-weight: 800; margin-bottom: 16px; color: #00ffae;">Find Your Audience Profile</h2>
+      <p style="color: #aaa; font-size: 1rem; margin-bottom: 28px;">Enter your UK postcode, US ZIP or any search term to get matched with your Experian Mosaic group and media consumption insight.</p>
+      <div style="display: flex; flex-direction: column; gap: 16px;">
+        <input type="text" id="postcodeInput" placeholder="Enter postcode, ZIP or search term" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+        <input type="number" id="budgetInput" placeholder="Budget (£)" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+        <button id="submitButton" type="button" style="background: #00ffae; color: #000; font-weight: bold; font-size: 1rem; padding: 14px; border-radius: 12px; border: none; transition: background 0.3s;">GET INSIGHTS</button>
+      </div>
+      <div id="resultContainer" class="hidden"></div>
+    </div>
+  </section>
 
   <script src="budget.js"></script>
   <script src="main.js"></script>
