--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </section>
 
   <script src="budget.js"></script>
-  <script src="main.js"></script>
+  <script src="results.js"></script>
 </body>
 </html>
 
