Handle low index channels and redesign results

--- a/results.html
+++ b/results.html
@@ -26,8 +26,8 @@
   </style>
 </head>
 <body>
-  <section style="background: linear-gradient(to bottom, #000, #0a0a0a); min-height: 100vh; padding: 40px 20px;">
-    <div id="resultContainer" class="hidden"></div>
+  <section id="resultsSection" style="background: linear-gradient(to bottom, #000, #0a0a0a); padding: 60px 20px;">
+    <div id="resultsRoot" style="max-width: 1200px; margin: auto; display: flex; flex-direction: column; gap: 40px;"></div>
   </section>
 
   <script src="results.js"></script>
