--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
   <section style="background: linear-gradient(to bottom, #000, #0a0a0a); height: 100vh; display: flex; justify-content: center; align-items: center; padding: 0 20px;">
     <div style="width: 100%; max-width: 540px; background: #0c0c0c; padding: 40px 32px; border-radius: 20px; box-shadow: 0 0 30px rgba(0, 255, 174, 0.2); border: 2px solid rgba(0, 255, 174, 0.4); text-align: center;">
       <h2 style="font-size: clamp(1.8rem, 4vw, 2.5rem); font-weight: 800; margin-bottom: 16px; color: #00ffae;">Find Your Audience Profile</h2>
-      <p style="color: #aaa; font-size: 1rem; margin-bottom: 28px;">Enter your UK postcode, US ZIP or any search term to get matched with your Experian Mosaic group and media consumption insight.</p>
+      <p style="color: #aaa; font-size: 1rem; margin-bottom: 28px;">Enter a Postcode, City, Region, or Local Authority to analyse media behaviour and build your campaign.</p>
       <div style="display: flex; flex-direction: column; gap: 16px;">
-        <input type="text" id="postcodeInput" placeholder="Enter postcode, ZIP or search term" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+        <input type="text" id="targetAreaInput" placeholder="Enter postcode, city or region" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
         <input type="number" id="budgetInput" placeholder="Budget (£)" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
         <button id="submitButton" type="button" style="background: #00ffae; color: #000; font-weight: bold; font-size: 1rem; padding: 14px; border-radius: 12px; border: none; transition: background 0.3s;">GET INSIGHTS</button>
       </div>
@@ -82,6 +82,7 @@
 
   <script src="budget.js"></script>
   <script src="main.js"></script>
+  <script src="chat.js"></script>
 </body>
 </html>
 
