--- a/results.html
+++ b/results.html
@@ -28,7 +28,7 @@
 <body>
   <section style="background: linear-gradient(to bottom, #000, #0a0a0a); padding: 40px 20px; text-align: center;">
     <div style="width:100%; max-width:540px; margin:auto; display:flex; flex-direction:column; gap:16px;">
-      <input type="text" id="postcodeInput" placeholder="Enter postcode, ZIP or search term" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+      <input type="text" id="targetAreaInput" placeholder="Enter postcode, city or region" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
       <input type="number" id="budgetInput" placeholder="Budget (£)" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
       <button id="submitButton" type="button" style="background:#00ffae; color:#000; font-weight:bold; font-size:1rem; padding:14px; border-radius:12px; border:none; transition:background 0.3s;">GET INSIGHTS</button>
     </div>
@@ -42,5 +42,6 @@
   <script src="results.js"></script>
   <script src="budget.js"></script>
   <script src="main.js"></script>
+  <script src="chat.js"></script>
 </body>
 </html>
