--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
         <input type="text" id="targetAreaInput" placeholder="Enter postcode, city or region" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
         <input type="number" id="budgetInput" placeholder="Budget (£)" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
         <button id="submitButton" type="button" style="background: #00ffae; color: #000; font-weight: bold; font-size: 1rem; padding: 14px; border-radius: 12px; border: none; transition: background 0.3s;">GET INSIGHTS</button>
+        <div style="display:flex;gap:8px;">
+          <input id="openAIInput" placeholder="Ask Core-IQ" style="flex:1;padding:12px;border-radius:12px;border:none;font-size:1rem;background:#111;color:#fff;box-shadow:inset 0 0 6px rgba(0,255,174,0.2);" />
+          <button id="openAIAskButton" type="button" style="background:#00ffae;color:#000;font-weight:bold;font-size:1rem;padding:12px;border-radius:12px;border:none;">Ask</button>
+        </div>
       </div>
       <div id="resultContainer" class="hidden"></div>
     </div>
