--- a/results.html
+++ b/results.html
@@ -30,6 +30,34 @@
     <div style="width:100%; max-width:540px; margin:auto; display:flex; flex-direction:column; gap:16px;">
       <input type="text" id="targetAreaInput" placeholder="Enter postcode, city or region" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
       <input type="number" id="budgetInput" placeholder="Budget (£)" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+      <select id="incomeFilter" style="padding:12px;border-radius:12px;border:none;font-size:1rem;background:#111;color:#fff;">
+        <option value="">Any Income</option>
+        <option value="1">&lt;£20K</option>
+        <option value="2">£20K-£39K</option>
+        <option value="3">£40K-£59K</option>
+        <option value="4">£60K-£99K</option>
+        <option value="5">£100K+</option>
+      </select>
+      <div style="display:flex;gap:8px;align-items:center;">
+        <input type="range" id="ageMin" min="18" max="80" value="18" style="flex:1;" />
+        <input type="range" id="ageMax" min="18" max="80" value="80" style="flex:1;" />
+      </div>
+      <select id="childrenFilter" style="padding:12px;border-radius:12px;border:none;font-size:1rem;background:#111;color:#fff;">
+        <option value="">Any Children</option>
+        <option value="0">0</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5+</option>
+      </select>
+      <select id="tenureFilter" style="padding:12px;border-radius:12px;border:none;font-size:1rem;background:#111;color:#fff;">
+        <option value="">Any Tenure</option>
+        <option value="owned">Owner-occupied</option>
+        <option value="rented">Private Rent</option>
+        <option value="council">Social Rent</option>
+      </select>
+      <input id="keywordFilter" placeholder="Keyword search" style="padding:12px;border-radius:12px;border:none;font-size:1rem;background:#111;color:#fff;box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
       <button id="submitButton" type="button" style="background:#00ffae; color:#000; font-weight:bold; font-size:1rem; padding:14px; border-radius:12px; border:none; transition:background 0.3s;">GET INSIGHTS</button>
     </div>
     <div id="resultContainer" class="hidden"></div>
