--- a/index.html
+++ b/index.html
@@ -74,18 +74,19 @@
       <div style="display: flex; flex-direction: column; gap: 16px;">
         <input type="text" id="targetAreaInput" placeholder="Enter postcode, city or region" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
         <input type="number" id="budgetInput" placeholder="Budget (£)" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+        <input type="number" id="productPriceInput" placeholder="Product Unit Price" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+        <input type="number" id="servicePriceInput" placeholder="Service Unit Price" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+        <input type="number" id="salesInput" placeholder="Target Sales" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+        <input type="number" id="reachInput" placeholder="Reach Estimate" style="padding: 16px; border-radius: 12px; border: none; font-size: 1rem; background: #111; color: #fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+        <button id="roiButton" type="button" style="background: #00ffae; color: #000; font-weight: bold; font-size: 1rem; padding: 14px; border-radius: 12px; border: none; transition: background 0.3s;">CALCULATE ROI</button>
         <div style="display:flex;gap:8px;">
           <input id="openAIInput" placeholder="Ask Core-IQ" style="flex:1;padding:12px;border-radius:12px;border:none;font-size:1rem;background:#111;color:#fff;box-shadow:inset 0 0 6px rgba(0,255,174,0.2);" />
           <button id="openAIAskButton" type="button" style="background:#00ffae;color:#000;font-weight:bold;font-size:1rem;padding:12px;border-radius:12px;border:none;">Ask</button>
         </div>
-        <select id="incomeFilter" style="padding:12px;border-radius:12px;border:none;font-size:1rem;background:#111;color:#fff;">
-          <option value="">Any Income</option>
-          <option value="1">&lt;£20K</option>
-          <option value="2">£20K-£39K</option>
-          <option value="3">£40K-£59K</option>
-          <option value="4">£60K-£99K</option>
-          <option value="5">£100K+</option>
-        </select>
+        <label style="text-align:left;font-size:0.9rem;">Income Band:
+          <input type="range" id="incomeSlider" min="1" max="5" value="1" step="1" style="width:100%;" oninput="document.getElementById('incomeValue').textContent=this.value;" />
+          <span id="incomeValue">1</span>
+        </label>
         <div style="display:flex;gap:8px;align-items:center;">
           <input type="range" id="ageMin" min="18" max="80" value="18" style="flex:1;" />
           <input type="range" id="ageMax" min="18" max="80" value="80" style="flex:1;" />
@@ -109,9 +110,11 @@
         <button id="submitButton" type="button" style="background: #00ffae; color: #000; font-weight: bold; font-size: 1rem; padding: 14px; border-radius: 12px; border: none; transition: background 0.3s;">GET INSIGHTS</button>
       </div>
       <div id="resultContainer" class="hidden"></div>
+      <div id="roiContainer" style="display:none;margin-top:20px;background:#111;padding:24px;border-radius:12px;box-shadow:0 0 16px rgba(0,255,174,0.3);"></div>
     </div>
   </section>
 
+  <script src="roi.js"></script>
   <script src="budget.js"></script>
   <script src="main.js"></script>
 </body>
