--- a/results.html
+++ b/results.html
@@ -30,14 +30,15 @@
     <div style="width:100%; max-width:540px; margin:auto; display:flex; flex-direction:column; gap:16px;">
       <input type="text" id="targetAreaInput" placeholder="Enter postcode, city or region" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
       <input type="number" id="budgetInput" placeholder="Budget (£)" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
-      <select id="incomeFilter" style="padding:12px;border-radius:12px;border:none;font-size:1rem;background:#111;color:#fff;">
-        <option value="">Any Income</option>
-        <option value="1">&lt;£20K</option>
-        <option value="2">£20K-£39K</option>
-        <option value="3">£40K-£59K</option>
-        <option value="4">£60K-£99K</option>
-        <option value="5">£100K+</option>
-      </select>
+      <input type="number" id="productPriceInput" placeholder="Product Unit Price" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+      <input type="number" id="servicePriceInput" placeholder="Service Unit Price" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+      <input type="number" id="salesInput" placeholder="Target Sales" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+      <input type="number" id="reachInput" placeholder="Reach Estimate" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
+      <button id="roiButton" type="button" style="background:#00ffae; color:#000; font-weight:bold; font-size:1rem; padding:14px; border-radius:12px; border:none; transition:background 0.3s;">CALCULATE ROI</button>
+      <label style="text-align:left;font-size:0.9rem;">Income Band:
+        <input type="range" id="incomeSlider" min="1" max="5" value="1" step="1" style="width:100%;" oninput="document.getElementById('incomeValue').textContent=this.value;" />
+        <span id="incomeValue">1</span>
+      </label>
       <div style="display:flex;gap:8px;align-items:center;">
         <input type="range" id="ageMin" min="18" max="80" value="18" style="flex:1;" />
         <input type="range" id="ageMax" min="18" max="80" value="80" style="flex:1;" />
@@ -65,9 +66,11 @@
 
   <section id="resultsSection" style="background: linear-gradient(to bottom, #000, #0a0a0a); min-height: 100vh; padding: 60px 20px;">
     <div id="resultsRoot" style="max-width: 1200px; margin: auto; display: flex; flex-direction: column; gap: 40px;"></div>
+    <div id="roiContainer" style="max-width: 600px; margin: 40px auto; display:none; background:#111; padding:24px; border-radius:12px; box-shadow:0 0 16px rgba(0,255,174,0.3);"></div>
   </section>
 
   <script src="results.js"></script>
+  <script src="roi.js"></script>
   <script src="budget.js"></script>
   <script src="main.js"></script>
   <script src="chat.js"></script>
