--- a/results.html
+++ b/results.html
@@ -33,7 +33,7 @@
       <input type="number" id="productPriceInput" placeholder="Product Unit Price" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
       <input type="number" id="salesInput" placeholder="Required QTY of Sales" style="padding:16px; border-radius:12px; border:none; font-size:1rem; background:#111; color:#fff; box-shadow: inset 0 0 6px rgba(0,255,174,0.2);" />
       <label style="text-align:left;font-size:0.9rem;">Income Band:
-        <input type="range" id="incomeSlider" min="10000" max="100000" value="10000" step="1000" style="width:100%;accent-color:#00ff00;" oninput="document.getElementById('incomeValue').textContent="£"+(this.value/1000)+"K";" />
+        <input type="range" id="incomeSlider" min="10000" max="100000" value="10000" step="1000" style="width:100%;accent-color:#00ffae;" />
         <span id="incomeValue">£10K</span>
       </label>
       <select id="childrenFilter" style="padding:12px;border-radius:12px;border:none;font-size:1rem;background:#111;color:#fff;">
@@ -65,6 +65,7 @@
   <script src="results.js"></script>
   <script src="roi.js"></script>
   <script src="budget.js"></script>
+  <script src="slider.js"></script>
   <script src="main.js"></script>
   <script src="chat.js"></script>
 </body>
